fix menu alignment, change home to a red sqauare and readd theming for legacy site message.

--- a/web/saito/css-imports/saito-components2.css
+++ b/web/saito/css-imports/saito-components2.css
@@ -537,3 +537,22 @@ Saito Arcade Invite
     height: 3rem;
 }
 
+
+/* ----------------------------------------------------------------
+Legacy Site Message
+-----------------------------------------------------------------*/
+div#message-wrapper {
+    border: 2px solid var(--saito-primary);
+    min-width: 500px;
+    padding: 1em;
+    background: var(--saito-primary);
+    position: fixed;
+    bottom: 1em;
+    left: 1em;
+    z-index: 200;
+  }
+
+  div#message-wrapper p {
+    font-size: 3rem;
+    color: #fff !important;
+  }
